# intrinsic

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
assets/internal/: promo-poster.html  social-preview.html
docs/: dcf-methodology.md  index.html
docs/internal/: 2026-04-08-synthetic-credit-rating-design.md  2026-04-08-synthetic-credit-rating-plan.md  2026-04-11-rd-adjusted-basis-design.md  2026-04-11-rd-adjusted-basis-plan.md  2026-04-11-rd-informational-design.md  2026-04-11-rd-informational-plan.md  damodaran-audit.md
docs/internal/feedback/: invest-2026-04-04.md
docs/superpowers/plans/: 2026-04-14-bottom-up-beta.md
docs/superpowers/specs/: 2026-04-14-bottom-up-beta-design.md
skills/analyze/: SKILL.md
skills/calibrate/: SKILL.md
skills/fetch/: SKILL.md
skills/report/: SKILL.md
skills/research/: SKILL.md
skills/value/: SKILL.md
stock_analyzer/: __init__.py  av_fetcher.py  damodaran_betas.py  dcf.py  metrics.py  stock_manager.py  utils.py
tests/: test_av_fetcher.py  test_damodaran_betas.py  test_dcf.py  test_metrics.py  test_stock_manager.py  test_utils.py
