[project]
name = "intrinsic"
version = "1.4.0"
description = "Stock analysis plugin for Claude Code — DCF valuation with qualitative research"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stock_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
